--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Word Definition</title>
+    <title>Words and Definitions</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Word Definition</h1>
+        <h1>Words & Definitions</h1>
       </div>
       <%= yield %>
     </div>
