Clicking the link 'List of words', users get to the page that has List of Words

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,6 @@
 <h1>Words and Definitions!</h1>
-<!-- <h3><a href="/words">See all words</a></h3>
-<h3><a href="/words/new">Add a new word</a></h3> -->
+<p>
+  You can either see the list of words or add a new word to the list.
+</p>
+<h3><a href="/words">List of words</a></h3>
+<h3><a href="/words/new">Add a new word</a></h3>
