--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Words & Definitions</h1>
+        <h1 style="text-align: center">DICTIONARY</h1>
       </div>
       <%= yield %>
     </div>
