--- a/views/words.erb
+++ b/views/words.erb
@@ -4,3 +4,11 @@
     <li><a href="/words/<%= word.id() %>"><%= word.name() %></a></li>
   <% end %>
 </ul>
+
+<p>
+  <a href="/words/new">Add a new word</a>
+</p>
+
+<p>
+  <a href="/">Back to homepage</a>
+</p>
